[BE] add Mappers and correct POST and PUT methods