@@ -1,5 +1,6 @@
 package pl.spot.us.backend.comment;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import pl.spot.us.backend.post.Post;
@@ -8,27 +9,22 @@ import pl.spot.us.backend.post.PostRepository;
 import pl.spot.us.backend.user.User;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class CommentService {
 
     private final CommentRepository commentRepository;
-    private final PostRepository postRepository;
 
-    public CommentService(CommentRepository commentRepository, PostRepository postRepository) {
-        this.commentRepository = commentRepository;
-        this.postRepository = postRepository;
-    }
+    private final CommentMapper commentMapper;
+
 
     public List<CommentDTO> findAll() {
         List<Comment> comments = commentRepository.findAll();
         return comments.stream()
-                .map(comment -> CommentDTO.builder()
-                        .id(comment.getId())
-                        .username(comment.getUser().getUsername())
-                        .content(comment.getContent())
-                        .build())
+                .map(commentMapper::toDTO)
                 .collect(Collectors.toList());
     }
 
@@ -36,30 +32,21 @@ public class CommentService {
         List<Comment> comments = commentRepository.findAll();
         List<Comment> commentsByPostId = comments
                 .stream()
-                .filter(comment -> comment.getPost().getId() == postId)
-                .collect(Collectors.toList());
+                .filter(comment -> Objects.equals(comment.getPost().getId(), postId)).toList();
+
         return commentsByPostId.stream()
-                .map(comment -> CommentDTO.builder()
-                        .id(comment.getId())
-                        .username(comment.getUser().getUsername())
-                        .content(comment.getContent())
-                        .build())
+                .map(commentMapper::toDTO)
                 .collect(Collectors.toList());
     }
 
-    public Comment createComment(Comment comment){
-        Comment savedComment = comment;
-        commentRepository.save(savedComment);
-        return comment;
+    public CommentDTO createComment(CommentDTO commentDTO, Long postId){
+        Comment savedComment = commentRepository.save(commentMapper.toEntity(commentDTO, postId));
+        return commentMapper.toDTO(savedComment);
     }
 
     public CommentDTO findById(Long id) {
         Comment comment = commentRepository.findById(id).orElseThrow(RuntimeException::new);
-        return CommentDTO.builder()
-                .id(comment.getId())
-                .username(comment.getUser().getUsername())
-                .content(comment.getContent())
-                .build();
+        return commentMapper.toDTO(comment);
     }
 
     public ResponseEntity updateComment(Long id, Comment comment) {
